substrate/frame/support/test/tests/pallet_ui/error_where_clause.stderr
error: Invalid pallet::error, where clause is not allowed on pallet error item
  --> tests/pallet_ui/error_where_clause.rs:36:20
   |
36 |     pub enum Error<T> where u32: From<u8> {}
   |                       ^^^^^
